@@ -1452,11 +1452,18 @@ def pipepager(text, cmd):
     import subprocess
     proc = subprocess.Popen(cmd, shell=True, stdin=subprocess.PIPE)
     try:
-        with proc:
-            with io.TextIOWrapper(proc.stdin, errors='backslashreplace') as pipe:
-                pipe.write(text)
+        with io.TextIOWrapper(proc.stdin, errors='backslashreplace') as pipe:
+            pipe.write(text)
     except OSError:
         pass # Ignore broken pipes caused by quitting the pager program.
+    while True:
+        try:
+            proc.wait()
+            break
+        except KeyboardInterrupt:
+            # Ignore ctl-c like the pager itself does.  Otherwise the pager is
+            # left running and the terminal is in raw mode and unusable.
+            pass
 
 def tempfilepager(text, cmd):
     """Page through text by invoking a program on a temporary file."""
